Defconfig: Enable Boeffla Wakelock Blocker
Change-Id: I67b4585da786ce922c2f2f6f3db2cd590d45c649

--- a/arch/arm64/configs/gemini_defconfig
+++ b/arch/arm64/configs/gemini_defconfig
@@ -89,6 +89,7 @@ CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_DEFAULT_WESTWOOD=y
 CONFIG_NET=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
 CONFIG_XFRM_USER=y
