--- a/arch/arm64/configs/gemini_defconfig
+++ b/arch/arm64/configs/gemini_defconfig
@@ -296,6 +296,7 @@ CONFIG_CNSS=y
 CONFIG_CNSS_PCI=y
 CONFIG_CNSS_ASYNC=y
 CONFIG_CLD_LL_CORE=y
+CONFIG_BUS_AUTO_SUSPEND=y
 CONFIG_WLAN_FEATURE_RX_WAKELOCK=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_INPUT_KEYRESET=y
